Fix align issues

--- a/recipes/styles/style.css
+++ b/recipes/styles/style.css
@@ -1,15 +1,8 @@
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+body {
+    margin: 25px;
 }
 
 h3 {
     font-size: 32px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-h3, p {
-    text-align: center;
 }
