--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(255, 250, 236);
+    margin: 25px;
 }
 
 a { 
